--- a/bootstrap_theme/templates/bootstrap/field.html
+++ b/bootstrap_theme/templates/bootstrap/field.html
@@ -3,7 +3,7 @@
 {% else %}
   <div class="control-group{% if field.errors %} error{% endif %}">
     {% if field.label %}
-      <label class="control-label" for="{{ field.auto_id }}">{{ field.label|safe }}</label>
+      <label class="control-label" for="{{ field.auto_id }}">{{ field.label|safe }}{% if field.field.required %}*{% endif %}</label>
     {% endif %}
     <div class="controls">
       {{ field }}
